# ChessFightEditorV2

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  run.py  vite.config.js
chessfight_editor/: __init__.py  app.py  config.py  models.py  routes_global.py  routes_set.py  utils.py
chessfight_editor/static/: editor.js  global_effects.js  global_fixed_terms.js  index.js  style.css
chessfight_editor/templates/: editor.html  global_effects.html  global_fixed_terms.html  index.html
data/: global_effects.json  global_fixed_terms.json  set_TEST01.json
docs/: plan.md
editor/: app.py  models.py  routes_global.py  routes_set.py  utils.py
editor/static/: editor.js  global_fixed_terms.js  index.js  style.css  validation.js
editor/templates/: global_effects.html
frontend/: index.html
frontend/src/: App.vue  style.css
frontend/src/components/: ModalDialog.vue  NotificationToast.vue
frontend/src/router/: index.js
frontend/src/utils/: api.js  notification.js  validation.js
frontend/src/views/: GlobalEffects.vue  GlobalEffects.vue.old  GlobalFixedTerms.vue  GlobalFixedTerms.vue.old  Home.vue  ImageManager.vue  NotFound.vue  SetEditor.vue  SetEditor.vue.old
